ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ClassDeclarations/parserClassDeclaration18/input.ts.stderr
error[1183]: An implementation cannot be declared in ambient contexts
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ClassDeclarations/parserClassDeclaration18/input.ts:4:25
  |
4 |     constructor(x: any) {
  |                         ^

